--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mr-use-case",
-  "version": "0.8.1",
-  "description": "A perfect way to wrap your business logic fast and properly.",
+  "name": "mr-publisher",
+  "version": "0.1.1",
+  "description": "A perfect way to publish your data to rabbitmq.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -17,34 +17,30 @@
     "deploy": "npm run dot-only-hunter && npm run test:coverage && npm run build && npm publish"
   },
   "keywords": [
-    "usecase",
+    "publisher",
     "typescript"
   ],
   "author": "Ilia Donskikh",
   "license": "ISC",
   "devDependencies": {
-    "@types/i18n": "^0.13.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.8",
-    "del-cli": "^4.0.1",
+    "del-cli": "^6.0.0",
     "dot-only-hunter": "^1.0.3",
-    "jest": "^27.4.7",
-    "ts-jest": "^27.1.2",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.4"
+    "jest": "^30.0.4",
+    "ts-jest": "^29.4.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   },
   "directories": {
     "test": "tests"
   },
-  "dependencies": {
-    "mr-error": "^0.7.2"
-  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/IlyaDonskikh/mr-use-case.git"
+    "url": "git+https://github.com/IlyaDonskikh/mr-publisher.git"
   },
   "bugs": {
-    "url": "https://github.com/IlyaDonskikh/mr-use-case/issues"
+    "url": "https://github.com/IlyaDonskikh/mr-publisher/issues"
   },
-  "homepage": "https://github.com/IlyaDonskikh/mr-use-case#readme"
+  "homepage": "https://github.com/IlyaDonskikh/mr-publisher#readme"
 }
