--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/amqplib": "^0.10.7",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.8",
+    "amqplib": "^0.10.8",
     "del-cli": "^6.0.0",
     "dot-only-hunter": "^1.0.3",
     "jest": "^30.0.4",
