--- a/package.json
+++ b/package.json
@@ -47,5 +47,5 @@
   "bugs": {
     "url": "https://github.com/IlyaDonskikh/mr-publisher/issues"
   },
-  "homepage": "https://github.com/IlyaDonskikh/mr-publisher#readme",
+  "homepage": "https://github.com/IlyaDonskikh/mr-publisher#readme"
 }
